# arbWaveCom

./: .gitignore  .travis.yml  README.md  build.bat  configure.ac  demoFile.txt  driver.c  genBinary.c  genBinary.cpp  genBinary.h  genBinary.hpp  go.bat  pointsFile.txt
docs/: Doxyfile
docs/html/: _a_w_g_interface_format.html  annotated.html  classes.html  def_options_8h.html  def_options_8h_source.html  def_options__int_8h.html  def_options__int_8h_source.html  dir_2e12fe0b6a50972eaa16b017192517b9.html  dir_35c498e6287bfa54b0ffb901383d69ec.html  filenames_8h.html  filenames_8h_source.html  files.html  functions.html  functions_vars.html  gen_binary_8h.html  gen_binary_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  group___gen_binary_ret_codes.html  group___help_text.html  group___opt_masks.html  group___opt_ret_codes.html  index.html  modules.html  pages.html  structfreq_list.html  structprog_options.html  template_contents_8h.html  template_contents_8h_source.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  (+21 more)
docs/latex/: .gitignore
src/: Makefile.am  driver.c
src/defOptions/: Makefile.am  defOptions.c  defOptions.h  defOptions_int.h  filenames.h  templateContents.h
src/genBinary/: Makefile.am  genBinary.c  genBinary.h
